...
  {
    name: 'general',
    href: '/products/general',
    label: 'Geral',
  },
  {
    name: 'list',
    href: '/products/list',
    label: 'Produtos',
  },
]

export { salesTabs, productsTabs }
...
