...
  const navigate = useRouter()

  return (
    <View style={s.container}>
      <TouchableOpacity
        style={s.back}
        testID="Back"
        onPress={
          onBack
            ? typeof onBack === 'function'
              ? onBack
              : () => navigate.dismissTo(onBack)
            : () => navigate.dismissTo('/')
...
